<resources>
    <string name="app_name">Korean Trip</string>
    <string name="google_maps_key">AIzaSyA5E85XZjrB5vPmiH8gnouZXspwleKfnB8</string>
    <string name="search_here">Search Here!</string>
    <string name="login">Login</string>
    <string name="korean_trip">Korean Trip</string>
    <string name="logout">logout</string>
    <string name="database_all_delete">database all delete</string>
    <string name="logout_success">logout Success</string>
    <string name="delete_all_data">Delete All TripData</string>
    <string name="setting">Setting</string>
    <string name="trip_title">Trip Title</string>
    <string name="trip_addr">Address</string>
    <string name="trip_tel">Tel</string>
    <string name="trip_contenttype">Type</string>
    <string name="trip_distance">Distance from center of map</string>
    <string name="m_unit_format">%f m</string>
    <string name="savetrip">Save Trip</string>
    <string name="no_data">No Data</string>
    <string name="trip_save">Trip Saved!!</string>
    <string name="trip_remove">Remove Trip</string>
    <string name="history">My Favorite Place</string>
    <string name="location_permission_success">Location permission is granted</string>
    <string name="marker_image">Marker Image</string>
    <string name="map_outlink">googleMap Outlink</string>
</resources>